# devops-engineer-from-scratch-project-313

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
.github/workflows/: lint.yml  test_app.yml  tests.yml
application/: app.py  config.py  links_repository.py  main.py  table_model.py  test_app.py  test_links_repository.py
project/: app.py  const.py
project/scripts/: main.py
project/scripts/models/: sqlModel.py
services/: nginx.conf
tests/: test_app.py
