[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]


