[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "gunicorn>=26.0.0",
    "make>=0.1.6.post2",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "sqlmodel>=0.0.38",
]
